--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
-# Arch-based Linux Package List Backup and Restore
+Arch-based Linux Package List Backup and Restore
 
 This repo is for my package list backup so that i can re-install all my package without remembering all of them. You can also use the command below to backup and re-install your package on new installation.
+To backup all of your currently installed package
+Backup package in official repository
 
-### To backup all of your currently installed package
-#### Backup package in official repository
-```bash
 pacman -Qqen > pkglist-repo.txt
-```
 
-#### Backup package in arch user repository (AUR)
-```bash
+Backup package in arch user repository (AUR)
+
 pacman -Qqem > pkglist-aur.txt
-```
 
-### To restore / re-install all of your package
-#### For repository package
-```bash
+To restore / re-install all of your package
+For repository package
+
 sudo pacman -S --needed - < pkglist-repo.txt
-```
 
-#### For AUR package
-```bash
+For AUR package
+
 for x in $(< pkglist-aur.txt); do yay -S $x; done
-```
+
+The information was gathered from here.
